Atualizei a escrita da página

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="profile-info">
 
                 24 anos, estudante do técnico de informática do colégio Ulbra São Lucas. Aprendendo tecnologias de
-                deenvolvimento de software.
+                desenvolvimento de software.
 
             </p>
             <p>Tecnologias que estou aprendendo:</p>
